--- a/admin.html
+++ b/admin.html
@@ -892,7 +892,7 @@
                 <button class="logout-btn" onclick="logout()">🚪 Logout</button>
                 <div class="header-content">
                     <h1>🏏 CricStreamZone Admin Panel</h1>
-                    <p>Manage live cricket matches and streaming servers</p>
+                    <p>Manage All Live Sports streaming servers</p>
                 </div>
             </div>
 
@@ -924,12 +924,12 @@
                     <div class="form-grid">
                         <div class="form-group">
                             <label>🏆 Match Name</label>
-                            <input type="text" id="matchName" placeholder="e.g., IND vs PAK T20 World Cup" required />
+                            <input type="text" id="matchName" placeholder="e.g., BAN vs PAK T20 World Cup" required />
                         </div>
 
                         <div class="form-group">
                             <label>🏏 Team 1</label>
-                            <input type="text" id="team1" placeholder="e.g., India" required />
+                            <input type="text" id="team1" placeholder="e.g., Bangladesh" required />
                         </div>
 
                         <div class="form-group">
@@ -1005,7 +1005,7 @@
         const CONFIG = {
             API_URL:
                 'https://script.google.com/macros/s/AKfycbxzx4xcwEGidoxEd7BQshkR9FKHjK5o0p8ukNY4NsKNR0EsShY7eV3MUxA2iXz1V8bmHg/exec',
-            ADMIN_PASSWORD: 'admin123', // Change this password
+            ADMIN_PASSWORD: 'bdhub2008', // Change this password
             SESSION_KEY: 'cricstream_admin_session',
             REALTIME_INTERVAL: 5000, // 5 seconds
             BROADCAST_CHANNEL: 'cricstream_updates',
